# subsidence

./: .gitignore  CLAUDE.md  README.md  agents.md  todo.md
app/: README.md  pyproject.toml
app/data/: sample.las
app/src/subsidence/: __init__.py  cli.py  models.py  observability.py  pipeline.py
app/src/subsidence/api/: compaction.py  formations.py  import_preview.py  lithology_patterns.py  main.py  projects.py  projects_config.py  projects_export.py  projects_imports.py  sea_level.py  strat_chart.py  subsidence.py  top_sets.py  wells.py
app/src/subsidence/data/: __init__.py  backstrip.py  deviation_transform.py  dict_resolver.py  dict_seeder.py  engine.py  importers.py  lithology_patterns.py  loaders.py  lttb.py  models.py  project_manager.py  schema.py  strat_link.py  undo.py  unit_conversion.py  unit_registry.py  well_colors.py  zone_service.py
app/src/subsidence/data/dictionaries/: curve_families.csv  lithology_defaults.csv
app/src/subsidence/data/dictionaries/compaction/: compaction_presets.csv
app/src/subsidence/data/dictionaries/lithology/: lithology_core.csv
app/src/subsidence/data/dictionaries/lithology_patterns/equinor/: manifest.csv
app/src/subsidence/data/dictionaries/lithology_sets/: default_lithologies.csv
app/src/subsidence/data/dictionaries/sea_level/: sea_level_binned_models.csv
app/src/subsidence/data/dictionaries/strat_charts/: ics_2023.csv
app/src/subsidence/data/importers/: __init__.py  common.py  deviation.py  las.py  logs_csv.py  preview.py  tops.py
app/src/subsidence/viz/: __init__.py  app.py  constants.py  plotting.py
app/src/subsidence/viz/assets/: sync.js  sync_scales.js
app/src/subsidence/viz/callbacks/: __init__.py  burial.py  sync.py  ui_state.py  well_log.py
app/src/subsidence/viz/layout/: __init__.py  burial_panel.py  modals.py  sidebar.py  well_log_panel.py
app/src/subsidence/viz/plotting/: __init__.py  burial.py  well_log.py
app/tests/: conftest.py  test_loaders.py  test_pipeline.py
app/tests/integration/: test_formation_crud.py  test_formation_depth_persistence.py  test_project_api_workflows.py
app/tests/unit/: test_backstrip.py
docs/: app_compass.md  architecture.md  (+24 more)
(+252 files in other folders)
