[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subsidence"
version = "0.1.0"
description = "Assemble subsidence curves from multiple open-source repositories"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "SUBSIDENCE team" }]
dependencies = []

[project.scripts]
subsidence = "subsidence.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
