[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subsidence"
version = "0.1.0"
description = "Compass-aligned backend for well log visualization"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "SUBSIDENCE team" }]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "lasio>=0.31",
    "sqlalchemy>=2.0",
    "pyarrow>=15.0",
    "platformdirs>=4.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
